--- a/src/application/templates/home.html
+++ b/src/application/templates/home.html
@@ -165,8 +165,8 @@
                     <input type="number" class="form-control" id="height" name="height" min="0" step="0.01" placeholder="e.g. 1.78">
                   </div>
                   <div class="col">
-                    <label for="mass" class="form-label">Mass (kg)</label>
-                    <input type="number" class="form-control" id="mass" name="mass" min="0" step="0.1" placeholder="e.g. 75">
+                    <label for="weight" class="form-label">Weight (kg)</label>
+                    <input type="number" class="form-control" id="weight" name="weight" min="0" step="0.1" placeholder="e.g. 75">
                   </div>
                 </div>
               </div>
